# Tech-Blogs-Newsletter

./: Dockerfile  Makefile  README.md  pyproject.toml
tech_blogs_newsletter/: domain.py  main.py
tech_blogs_newsletter/sources/: medium.py
tech_blogs_newsletter/tech_blogs/: airbnb.py  mercado_livre.py  neoway.py  netflix.py
tests/unit/: test_domain.py  test_main.py
tests/unit/sources/: test_medium.py
