[project]
name = "tech-blogs-newsletter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luiz Felipe Manke",email = "luizmanke@gmail.com"},
]
dependencies = []
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
